# aiformula_rosmaster

./: .gitattributes  .gitignore  README.md  README.zh-CN.md
codex/: aiformula_code_changes.md  aiformula_sophia_inspection.md  jetson_robot_inspection.md  live_rosmaster_deployment_log.md  masterprompt.md  rosmaster_aiformula_adaptation_roadmap.md
scripts/: rosmaster_disable_vendor_startup.sh  rosmaster_restore_vendor_startup.sh
workspace/ros2_ws/: README.md
workspace/ros2_ws/src/aiformula/auto_launch/: package.xml  setup.cfg  setup.py
workspace/ros2_ws/src/aiformula/auto_launch/launch/: auto_yolop_launch.py
workspace/ros2_ws/src/aiformula/launchers/: package.xml  setup.py
workspace/ros2_ws/src/aiformula/launchers/launch/: all_nodes.launch  all_nodes.launch.py
workspace/ros2_ws/src/aiformula/launchers/shellscript/: build_ws.sh  init_sensors.sh  launch_all_nodes.sh  simple_path_check.sh  source_rosmaster_env.sh
workspace/ros2_ws/src/aiformula/road_detector/: package.xml  setup.py
workspace/ros2_ws/src/aiformula/road_detector/config/: yolop_a1.yaml
workspace/ros2_ws/src/aiformula/road_detector/launch/: road_detector.launch.py
workspace/ros2_ws/src/aiformula/road_detector/road_detector/: road_detector.py
workspace/ros2_ws/src/aiformula/road_detector/tools/: export_lane_checkpoint.py
workspace/ros2_ws/src/aiformula/rosmaster_aiformula_bridge/: package.xml  setup.cfg  setup.py
workspace/ros2_ws/src/aiformula/rosmaster_aiformula_bridge/rosmaster_aiformula_bridge/: camera_compat_bridge.py  compat_bridge.py  joy_diff_drive_mapper.py  rosmaster_driver_x3.py
workspace/ros2_ws/src/aiformula/rosmaster_aiformula_bringup/: package.xml  setup.cfg  setup.py
workspace/ros2_ws/src/aiformula/rosmaster_aiformula_bringup/config/: imu_filter_param.yaml  rosmaster_usb_camera.yaml
workspace/ros2_ws/src/aiformula/rosmaster_aiformula_bringup/launch/: rosmaster_aiformula_bringup.launch.py
