<?xml version="1.0"?>
<package format="3">
  <name>auto_launch</name>
  <version>0.1.0</version>
  <description>AI Formula perception launchers for the ROSMASTER adapter workspace.</description>
  <maintainer email="dev@example.com">ROSMASTER AI Formula Maintainers</maintainer>
  <license>Proprietary</license>

  <exec_depend>road_detector</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
