<?xml version="1.0"?>
<package format="3">
  <name>launchers</name>
  <version>0.1.0</version>
  <description>AI Formula launch entrypoints adapted for the ROSMASTER development platform.</description>
  <maintainer email="dev@example.com">ROSMASTER AI Formula Maintainers</maintainer>
  <license>Proprietary</license>

  <exec_depend>rosmaster_aiformula_bringup</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
