<?xml version="1.0"?>
<package format="3">
  <name>rosmaster_aiformula_bringup</name>
  <version>0.1.0</version>
  <description>ROSMASTER bringup for AI Formula/Sophia compatibility testing.</description>
  <maintainer email="dev@example.com">ROSMASTER AI Formula Maintainers</maintainer>
  <license>Proprietary</license>

  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosmaster_aiformula_bridge</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>yahboomcar_base_node</exec_depend>
  <exec_depend>yahboomcar_description</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
